<resources>
    <string name="app_name">YELL:O</string>
    <string name="splash_title">지금 누군가 당신을 생각하고 있어요!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_error">오류가 발생하였습니다.</string>
    <string name="msg_failure">정보 불러오기에 실패했습니다.</string>
    <string name="to_string">%s</string>
    <string name="msg_auto_login_error">다시 한 번 로그인해주세요.</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="adapter_not_initialized_error_msg">Adapter is not initialized</string>
    <string name="manager_not_initialized_error_msg">Billing Manager is not initialized</string>
    <string name="sign_in_tv_title">Yell:o에 오신 걸 환영해요!</string>
    <string name="sign_in_tv_subtitle">가입을 시작해볼까요?</string>
    <string name="sign_in_tv_btn">카카오로 시작하기</string>
    <string name="sign_in_error_kakao_account_login">카카오 계정으로 로그인 실패</string>
    <string name="sign_in_error_kakao_app_login">카카오톡으로 로그인 실패</string>
    <string name="sign_in_error_cancelled">유저가 로그인 취소</string>
    <string name="sign_in_error_empty_kakao_token">빈 카카오 토큰</string>
    <string name="sign_in_error_connection">서버 통신에 실패했습니다</string>
    <string name="sign_in_error_kakao_token">카카오 토큰 받기 실패</string>
    <string name="sign_in_error_kakao_user_data">카카오 유저 정보 받기 실패</string>
    <string name="social_sync_tv_title">나의 옐로 친구는 어디 있을까?</string>
    <string name="social_sync_tv_subtitle">친구 목록을 불러와봐요!</string>
    <string name="social_sync_tv_btn">카카오톡 친구 연결하기</string>
    <string name="social_sync_tv_info"><u>개인정보처리방침</u></string>
    <string name="social_sync_error_kakao_profile">카카오 프로필 가져오기 실패</string>
    <string name="main_recommend">추천친구</string>
    <string name="main_look">타임라인</string>
    <string name="main_yello">옐로하기</string>
    <string name="main_my_yello">내 쪽지</string>
    <string name="main_profile">프로필</string>
    <string name="main_toast_back_pressed">버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="main_get_notice_failure">공지 조회에 실패했습니다.</string>
    <string name="onboarding_tv_what_studentid">몇 학번인가요?</string>
    <string name="onboarding_tv_search_department">학과 검색하기</string>
    <string name="onboarding_btn_add_department"><u>찾는 과가 없다면 클릭하세요!</u></string>
    <string name="onboarding_tv_select_studentid">학번을 선택해주세요.</string>
    <string name="onboarding_tv_search_school">우리 학교 검색하기</string>
    <string name="onboarding_tv_add_school"><u>우리 학교가 없나요? 학교를 추가해보세요!</u></string>
    <string name="onboarding_tv_readyto_login">옐로에 가입하기 위한 첫 절차예요.</string>
    <string name="onboarding_tv_what_school">학교가 어디인가요?</string>
    <string name="onboarding_tv_what_department">무슨 학과인가요?</string>
    <string name="onboarding_btn_next">다음</string>
    <string name="onboarding_btn_edit_name_next">수정 완료</string>
    <string name="onboarding_tv_name">나의 이름은?</string>
    <string name="onboarding_tv_name_description_first">이후에는 이름 수정이 어려우니</string>
    <string name="onboarding_tv_name_description_second">실제 이름</string>
    <string name="onboarding_tv_name_description_third">을 적어주세요.</string>
    <string name="onboarding_tv_id">내가 사용할 아이디는?</string>
    <string name="onboarding_yelloid_hint_start">인스타그램 아이디</string>
    <string name="onboarding_yelloid_hint_middle">로 하면 친구들이 찾기 쉬워요!</string>
    <string name="onboarding_yelloid_hint_end">(최대 20자)</string>
    <string name="onboarding_et_id">yelloworld</string>
    <string name="onboarding_tv_gender">나의 성별은?</string>
    <string name="onboarding_tv_code">추천인 코드</string>
    <string name="onboarding_tv_code_hint">yelloworld</string>
    <string name="onboarding_tv_code_skip">추천인이 없다면 건너뛰어도 돼요.</string>
    <string name="onboarding_tv_code_subtitle_1">추천인의 아이디를 입력하면</string>
    <string name="onboarding_tv_code_subtitle_2">+100</string>
    <string name="onboarding_tv_code_subtitle_3">point!</string>
    <string name="onboarding_btn_code_skip">건너뛰기</string>
    <string name="onboarding_tv_startapp_title">띵동! 쪽지 도착 </string>
    <string name="onboarding_tv_startapp_subtitle">친구들이 비밀 쪽지를 보내면\n 알림을 드릴게요. </string>
    <string name="onboarding_tv_start_yello">쪽지 알림 받기</string>
    <string name="onboarding_btn_gender_done">다음</string>
    <string name="onboarding_tv_gender_x">남자</string>
    <string name="onboarding_tv_gender_y">여자</string>
    <string name="onboarding_tv_addfriend">친구를 추가하세요!</string>
    <string name="onboarding_tv_addfriend_subtitle">친구가 많을수록 쪽지도 많이 받아요.</string>
    <string name="onboarding_btn_addfriend_next">다음</string>
    <string name="onboarding_tv_addfriend_how_many">선택된 친구</string>
    <string name="onboarding_tv_freind_end">명</string>
    <string name="onboarding_tv_hint_fix">\@</string>
    <string name="onboarding_student_id">%d학번</string>
    <string name="onboarding_group">%s반</string>
    <string name="onboarding_code_complete">완료</string>
    <string name="onboarding_name_id_name_hint">ex.김옐로</string>
    <string name="onboarding_name_id_hangul_error">특수문자, 한글 외 문자는 입력할 수 없어요.</string>
    <string name="onboarding_name_id_id_error">문자, 숫자, 밑줄, 마침표만 사용할 수 있어요.</string>
    <string name="onboarding_gender_female">여자</string>
    <string name="onboarding_gender_male">남자</string>
    <string name="onboarding_name_id_duplicate_id_msg">이미 사용하고 있는 아이디에요.</string>
    <string name="onboarding_code_duplicate_msg">존재하지 않는 추천인 코드입니다.</string>
    <string name="onboarding_add_friend_error">추천친구 서버통신 실패</string>
    <string name="onboarding_select_student_Type_title">해당되는 곳에 체크해주세요.</string>
    <string name="onboarding_tv_select_student_highschool">중/고등학생</string>
    <string name="onboarding_tv_select_student_university">대학생</string>
    <string name="onboarding_department_select_warning">"학교를 선택해야 학과를 선택할 수 있어요!"</string>
    <string name="onboarding_group_select_warning">"학교와 학년을 선택해야 반을 선택할 수 있어요!"</string>
    <string name="onboarding_school_hint">ex. 옐로대학교</string>
    <string name="onboarding_department_hint">ex. 노랑학과</string>
    <string name="onboarding_tv_hint_select_studentid">ex. 23학번</string>
    <string name="onboarding_name_edit_dialog_btn_no">제 이름이 아니에요</string>
    <string name="onboarding_name_edit_dialog_btn_yes">네,맞아요</string>
    <string name="onboarding_name_edit_dialog_tv_title_quotes">"\""</string>
    <string name="onboarding_name_edit_dialog_tv_title_end">"님이 맞으신가요?"</string>
    <string name="yello_start_my_point">내 포인트</string>
    <string name="yello_start_description">누구에게 어떤 메시지를 보낼까?</string>
    <string name="yello_start_point_label">Point</string>
    <string name="yello_start_vote">START!</string>
    <string name="yello_start_balloon_top">오늘은</string>
    <string name="yello_start_balloon_mid1">누구에게 어떤 쪽지</string>
    <string name="yello_start_balloon_mid2">를</string>
    <string name="yello_start_balloon_bottom">보내볼까?</string>
    <string name="yello_start_double">x2</string>
    <string name="yello_lock_description">옐로를 시작하고 싶다면?</string>
    <string name="yello_lock_invite">친구 초대하고 100포인트 받기</string>
    <string name="yello_lock_sub_description">친구가 1명 이상 모이면 투표할 수 있어요.\n친구들을 초대해볼까요?</string>
    <string name="note_index_of_vote">&#160;of %s</string>
    <string name="note_friend_shuffle">친구 셔플</string>
    <string name="note_shuffle_count">%d/3</string>
    <string name="note_skip">이 질문 건너뛰기</string>
    <string name="note_yello_id">\@%s</string>
    <string name="my_yello_title">내 쪽지</string>
    <string name="my_yello_count_end">개</string>
    <string name="my_yello_shop">상점</string>
    <string name="my_yello_receive_title">받은 쪽지</string>
    <string name="my_yello_send_check">누가 보냈는지 확인하기</string>
    <string name="my_yello_send_open">누가 보냈는지 열어보기</string>
    <string name="my_yello_you">너</string>
    <string name="my_yello_not_yet">아직 쪽지가 온 게 없어요.</string>
    <string name="my_yello_question">\???</string>
    <string name="my_yello_zero">0</string>
    <string name="my_yello_send">님이 보냄</string>
    <string name="my_yello_female">익명의 여학생</string>
    <string name="my_yello_male">익명의 남학생</string>
    <string name="my_yello_instagram">인스타그램 공유하기</string>
    <string name="my_yello_point_check">100포인트로 키워드 확인하기</string>
    <string name="my_yello_300">300</string>
    <string name="my_yello_story_share">스토리 공유</string>
    <string name="my_yello_banner_icon">내 쪽지 배너 아이콘</string>
    <string name="my_yello_click_me">CLICK ME</string>
    <string name="my_yello_get_banner_failure">배너 정보 불러오기에 실패했습니다.</string>
    <string name="my_yello_send_open_click">무슨 쪽지가 궁금한가요?</string>
    <string name="my_yello_read_open_first_letter_with_300_points">300포인트로 초성 1개 확인하기</string>
    <string name="my_yello_read_open_keyword_with_100_points">100포인트로 키워드 확인하기</string>
    <string name="point_description">투표 포인트 적립!</string>
    <string name="point_sub_description">투표로 포인트를 모아 쪽지를 열어보세요.</string>
    <string name="point_plus">+</string>
    <string name="point_vote_point_label">Point</string>
    <string name="point_confirm">확인</string>
    <string name="wait_balloon_tooltip">🤩 친구가 가입하면 바로 투표할 수 있어요!</string>
    <string name="wait_time_format">%02d:%02d</string>
    <string name="wait_invite">기다리지 않고 바로 투표하기</string>
    <string name="wait_description">다음 투표까지 남은 시간</string>
    <string name="wait_sub_description">시간이 지나면 다시 투표할 수 있어요!</string>
    <string name="note_msg_invalid_skip">한 번 선택하면 건너뛸 수 없어요.</string>
    <string name="note_msg_invalid_cancel">한 번 선택하면 취소할 수 없어요.</string>
    <string name="note_msg_invalid_shuffle">이름을 선택하면 셔플을 사용할 수 없어요.</string>
    <string name="look_title">타임라인</string>
    <string name="look_error_friend_list">타임라인 가져오기 실패</string>
    <string name="look_invite_no_title">친구들이 받은 쪽지가 궁금하다면\n친구를 초대해볼까요?</string>
    <string name="look_tv_info">쪽지를 보낸 사람의 이름은 공개되지 않아요.</string>
    <string name="look_tv_filter_basic">모든 쪽지</string>
    <string name="view_type_error_msg">Unknown View Type : %d</string>
    <string name="profile_error_user_data">유저 정보 가져오기 실패</string>
    <string name="profile_error_friend_list">친구 목록 가져오기 실패</string>
    <string name="profile_error_delete_friend">친구 삭제하기 실패</string>
    <string name="profile_error_logout">로그아웃 실패 : %s</string>
    <string name="profile_error_unlink">회원 탈퇴하기 실패</string>
    <string name="profile_error_unlink_kakao">카카오 연동 끊기 실패</string>
    <string name="profile_detail_tv_title">프로필 정보</string>
    <string name="profile_detail_btn_kakao_change">카카오톡 동기화</string>
    <string name="profile_detail_tv_name">이름</string>
    <string name="profile_detail_tv_id">아이디</string>
    <string name="profile_detail_tv_school">학교</string>
    <string name="profile_detail_tv_univ_subgroup">학과</string>
    <string name="profile_detail_tv_univ_admyear">학번</string>
    <string name="profile_detail_tv_school_grade">학년</string>
    <string name="profile_detail_tv_school_classroom">반</string>
    <string name="profile_detail_image_change">프로필 사진 동기화 완료</string>
    <string name="profile_mod_already_changed">이미 동기화된 이미지입니다.</string>
    <string name="profile_mod_tv_title">프로필 수정</string>
    <string name="profile_mod_btn_save">저장</string>
    <string name="profile_mod_tv_warning">올해 한 번만 수정할 수 있어요.\n신중히 수정해 주세요!</string>
    <string name="profile_mod_tv_date_title">마지막 수정일 : </string>
    <string name="profile_mod_tv_school">학교</string>
    <string name="profile_manage_tv_title">설정</string>
    <string name="profile_manage_tv_center">고객센터</string>
    <string name="profile_manage_tv_privacy">개인정보 처리방침</string>
    <string name="profile_manage_tv_service">이용약관</string>
    <string name="profile_manage_tv_logout">로그아웃</string>
    <string name="profile_manage_tv_quit">계정 탈퇴</string>
</resources>