<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.el.yello.presentation.onboarding.activity.OnBoardingViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:paddingVertical="5dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/onboarding_tv_code"
            android:textAppearance="?textAppearanceHeadline2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_code_subtitle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingVertical="4dp"
            android:text="@string/onboarding_tv_code_subtitle_1"
            android:textAppearance="?textAppearanceBodySmall"
            android:textColor="@color/grayscales_500"
            app:layout_constraintEnd_toStartOf="@id/tv_code_hint_subtitle_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_code_hint_subtitle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="3dp"
            android:paddingVertical="4dp"
            android:text="@string/onboarding_tv_code_subtitle_2"
            android:textAppearance="?textAppearanceBodySmall"
            android:textColor="@color/yello_main_500"
            app:layout_constraintEnd_toStartOf="@id/tv_code_hint_subtitle_3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_code_subtitle_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_code_hint_subtitle_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingVertical="4dp"
            android:text="@string/onboarding_tv_code_subtitle_3"
            android:textAppearance="?textAppearanceBodySmall"
            android:textColor="@color/grayscales_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_code_hint_subtitle_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_code_fix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/onboarding_tv_hint_fix"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_code" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@{vm.isValidCode() ? @drawable/sel_onbarding_editext_focus : @drawable/shape_fill_red20_line_semantic_status_red500_rect_8}"
            android:ellipsize="end"
            android:fontFamily="@font/font_pretendard_medium"
            android:gravity="center_vertical"
            android:hint="@string/onboarding_tv_code_hint"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingVertical="18dp"
            android:paddingStart="40dp"
            android:paddingEnd="12dp"
            android:text="@={vm.codeText}"
            android:textColor="@color/white"
            android:textColorHint="@color/grayscales_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_code_subtitle_1"
            tools:text="@string/dummy" />

        <ImageView
            android:id="@+id/iv_code_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginEnd="18dp"
            android:background="@{vm.isValidCode() ? @drawable/ic_onboarding_delete : @drawable/ic_onboarding_delete_red}"
            android:visibility="@{vm.codeText.isBlank() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/et_code"
            app:layout_constraintEnd_toEndOf="@id/et_code"
            app:layout_constraintTop_toTopOf="@+id/et_code" />

        <TextView
            android:id="@+id/tv_code_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/pretendard_medium"
            android:maxLines="1"
            android:text="@{vm.isValidCode() ? @string/onboarding_tv_code_skip : @string/onboarding_name_id_id_error}"
            android:textColor="@{vm.isValidCode() ? @color/grayscales_500 : @color/semantic_red_500}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_code" />

        <TextView
            android:id="@+id/btn_code_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@null"
            android:gravity="center"
            android:padding="12dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/onboarding_btn_code_skip"
            android:clickable="@{vm.codeText.isEmpty()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grayscales_200"
            app:layout_constraintBottom_toTopOf="@+id/btn_code_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_code_next"
            android:layout_width="0dp"
            tools:background="@drawable/shape_yello_main_500_fill_100_rect"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:background="@{!vm.codeText.isEmpty()? @drawable/shape_yello_main_500_fill_100_rect : @drawable/shape_grayscales_800_fill_100_rect}"
            android:clickable="@{!vm.codeText.isEmpty()}"
            android:paddingVertical="16dp"
            android:text="@string/onboarding_code_complete"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceBodyMedium"
            android:textColor="@{!vm.codeText.isEmpty()? @color/black : @color/grayscales_700}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>