<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.el.yello.presentation.onboarding.OnBoardingViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_yello_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/iv_yello_bubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_onboarding_yelloid_bubble"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/onboarding_tv_id"
            android:textAppearance="?textAppearanceHeadline1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_yello_bubble" />

        <TextView
            android:id="@+id/iv_nameid_fix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/onboarding_tv_hint_fix"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_id"
            app:layout_constraintStart_toStartOf="@id/et_id"
            app:layout_constraintTop_toTopOf="@+id/et_id" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:background="@{vm.isValidId() ? @drawable/sel_onbarding_editext_focus : @drawable/shape_fill_red20_line_semantic_status_red500_rect_8}"
            android:fontFamily="@font/font_pretendard_medium"
            android:hint="@string/onboarding_et_id"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingVertical="18dp"
            android:paddingStart="39dp"
            android:paddingEnd="20dp"
            android:text="@={vm.idText}"
            android:textColor="@color/white"
            android:textColorHint="@color/grayscales_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_id" />

        <ImageView
            android:id="@+id/btn_id_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:background="@{vm.isValidId() ? @drawable/ic_onboarding_delete : @drawable/ic_onboarding_delete_red}"
            android:visibility="@{vm.idText.isBlank() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/et_id"
            app:layout_constraintEnd_toEndOf="@id/et_id"
            app:layout_constraintTop_toTopOf="@+id/et_id"
            tools:background="@drawable/ic_onboarding_delete" />

        <TextView
            android:id="@+id/tv_id_error_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingVertical="2dp"
            android:text="@{vm.isValidId() ? @string/onboarding_yelloid_hint_start : @string/onboarding_name_id_id_error}"
            android:textAppearance="?textAppearanceLabelLarge"
            android:textColor="@{vm.isValidId() ? @color/yello_main_500 : @color/semantic_red_500}"
            app:layout_constraintStart_toStartOf="@id/et_id"
            app:layout_constraintTop_toBottomOf="@id/et_id"
            tools:text="@string/onboarding_yelloid_hint_start"
            tools:textColor="@color/yello_main_500" />

        <TextView
            android:id="@+id/tv_id_error_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingVertical="2dp"
            android:text="@string/onboarding_yelloid_hint_middle"
            android:textAppearance="?textAppearanceLabelLarge"
            android:textColor="@color/grayscales_500"
            android:visibility="@{vm.isValidId() ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintStart_toEndOf="@id/tv_id_error_first"
            app:layout_constraintTop_toBottomOf="@id/et_id" />

        <TextView
            android:id="@+id/tv_id_error_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingVertical="2dp"
            android:text="@string/onboarding_yelloid_hint_end"
            android:textAppearance="?textAppearanceLabelLarge"
            android:textColor="@color/grayscales_500"
            android:visibility="@{vm.isValidId() ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintStart_toStartOf="@+id/tv_id_error_first"
            app:layout_constraintTop_toBottomOf="@+id/tv_id_error_first" />

        <TextView
            android:id="@+id/btn_yello_id_next"
            android:layout_width="0dp"
            android:textAlignment="center"
            tools:background="@drawable/shape_yello_main_500_fill_100_rect"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:background="@{ vm.isValidId() &amp; !vm.idText.isEmpty() ? @drawable/shape_yello_main_500_fill_100_rect : @drawable/shape_grayscales_800_fill_100_rect}"
            android:clickable="@{ vm.isValidId() &amp; !vm.idText.isEmpty()}"
            android:paddingVertical="16dp"
            android:text="@string/onboarding_btn_next"
            android:textAppearance="?textAppearanceBodyMedium"
            android:textColor="@{vm.isValidId() &amp; !vm.idText.isEmpty() ? @color/black : @color/grayscales_700}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
